# base

./: .gitignore  .gitmodules  main.c  meson.build
arena/: arena.c  arena.h
collections/: dict.c  dict.h  list.c  list.h
include/: arena.h  bytes.h  util.h
tests/: test_list.c
